responsive on mobile fix

--- a/src/Components/Buttons/Buttons.css
+++ b/src/Components/Buttons/Buttons.css
@@ -67,8 +67,8 @@ button:hover {
     width: 280px; 
   }
   .newQuote {
-    width: 145px;
-    font-size: 13px; 
+    width: 135px;
+    font-size: 14px; 
     margin-left: 40px; 
     white-space: nowrap; 
   }
